chore: fix `code` tag alignment (#750)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -118,3 +118,7 @@ video.video-cover:not(:fullscreen) {
 kbd {
   white-space: nowrap;
 }
+
+code {
+  vertical-align: baseline;
+}
